超弾性体3D(Mooney-Rivlin、Ogden)、多点拘束(MPC)3D、剛体との接触3D

--- a/src/IvyFEMProtoApp/IvyFEMProtoApp/MainWindow.xaml
+++ b/src/IvyFEMProtoApp/IvyFEMProtoApp/MainWindow.xaml
@@ -22,25 +22,36 @@
                     <MenuItem Header="DrawString" Click="DrawStringBtn_Click"/>
                 </MenuItem>
                 <MenuItem Header="Cad(3D)">
-                    <MenuItem Header="Cad(3D)(Plate Only)" Click="Cad3DPlateOnlyBtn_Click"/>
-                    <MenuItem Header="Coare Mesh(3D)(Plate Only)" Click="CoarseMesh3DPlateOnlyBtn_Click"/>
-                    <MenuItem Header="Mesh(3D)(Plate Only)" Click="Mesh3DPlateOnlyBtn_Click"/>
-                    <Separator/>
-                    <MenuItem Header="Cad(3D)(1)" Click="Cad3D1Btn_Click"/>
-                    <MenuItem Header="Coare Mesh(3D)(1)" Click="CoarseMesh3D1Btn_Click"/>
-                    <MenuItem Header="Mesh(3D)(1)" Click="Mesh3D1Btn_Click"/>
-                    <Separator/>
-                    <MenuItem Header="Cad(3D)(2)" Click="Cad3D2Btn_Click"/>
-                    <MenuItem Header="Coare Mesh(3D)(2)" Click="CoarseMesh3D2Btn_Click"/>
-                    <MenuItem Header="Mesh(3D)(2)" Click="Mesh3D2Btn_Click"/>
-                    <Separator/>
-                    <MenuItem Header="Cad(3D)(3)" Click="Cad3D3Btn_Click"/>
-                    <MenuItem Header="Coare Mesh(3D)(3)" Click="CoarseMesh3D3Btn_Click"/>
-                    <MenuItem Header="Mesh(3D)(3)" Click="Mesh3D3Btn_Click"/>
-                    <Separator/>
-                    <MenuItem Header="Cad(3D)(4)" Click="Cad3D4Btn_Click"/>
-                    <MenuItem Header="Coare Mesh(3D)(4)" Click="CoarseMesh3D4Btn_Click"/>
-                    <MenuItem Header="Mesh(3D)(4)" Click="Mesh3D4Btn_Click"/>
+                    <MenuItem Header="Cad(3D)(Plate Only)">
+                        <MenuItem Header="Cad(3D)(Plate Only)" Click="Cad3DPlateOnlyBtn_Click"/>
+                        <MenuItem Header="Coare Mesh(3D)(Plate Only)" Click="CoarseMesh3DPlateOnlyBtn_Click"/>
+                        <MenuItem Header="Mesh(3D)(Plate Only)" Click="Mesh3DPlateOnlyBtn_Click"/>
+                    </MenuItem>
+                    <MenuItem Header="Cad(3D)(1)">
+                        <MenuItem Header="Cad(3D)(1)" Click="Cad3D1Btn_Click"/>
+                        <MenuItem Header="Coare Mesh(3D)(1)" Click="CoarseMesh3D1Btn_Click"/>
+                        <MenuItem Header="Mesh(3D)(1)" Click="Mesh3D1Btn_Click"/>
+                    </MenuItem>
+                    <MenuItem Header="Cad(3D)(2)">
+                        <MenuItem Header="Cad(3D)(2)" Click="Cad3D2Btn_Click"/>
+                        <MenuItem Header="Coare Mesh(3D)(2)" Click="CoarseMesh3D2Btn_Click"/>
+                        <MenuItem Header="Mesh(3D)(2)" Click="Mesh3D2Btn_Click"/>
+                    </MenuItem>
+                    <MenuItem Header="Cad(3D)(3)">
+                        <MenuItem Header="Cad(3D)(3)" Click="Cad3D3Btn_Click"/>
+                        <MenuItem Header="Coare Mesh(3D)(3)" Click="CoarseMesh3D3Btn_Click"/>
+                        <MenuItem Header="Mesh(3D)(3)" Click="Mesh3D3Btn_Click"/>
+                    </MenuItem>
+                    <MenuItem Header="Cad(3D)(4)">
+                        <MenuItem Header="Cad(3D)(4)" Click="Cad3D4Btn_Click"/>
+                        <MenuItem Header="Coare Mesh(3D)(4)" Click="CoarseMesh3D4Btn_Click"/>
+                        <MenuItem Header="Mesh(3D)(4)" Click="Mesh3D4Btn_Click"/>
+                    </MenuItem>
+                    <MenuItem Header="Cad(3D)(5)">
+                        <MenuItem Header="Cad(3D)(5)" Click="Cad3D5Btn_Click"/>
+                        <MenuItem Header="Coare Mesh(3D)(5)" Click="CoarseMesh3D5Btn_Click"/>
+                        <MenuItem Header="Mesh(3D)(5)" Click="Mesh3D5Btn_Click"/>
+                    </MenuItem>
                 </MenuItem>
                 <MenuItem Header="Numerics">
                     <MenuItem Header="LAPACK" Click="LapackBtn_Click"/>
@@ -80,22 +91,27 @@
                         <MenuItem Header="Ogden(MPC)(Time Domain)" Click="OgdenHyperelasticMultipointConstraintTDBtn_Click"/>
                     </MenuItem>
                     <MenuItem Header="Elastic(Contact)">
-                        <MenuItem Header="Elastic(Contact)(Time Domain)" Click="ElasticContactTDBtn_Click"/>
-                        <MenuItem Header="St.Venant(Contact)(Time Domain)" Click="StVenantHyperelasticContactTDBtn_Click"/>
-                        <MenuItem Header="Mooney-Rivlin(Contact)(Time Domain)" Click="MooneyRivlinHyperelasticContactTDBtn_Click"/>
-                        <MenuItem Header="Ogden(Contact)(Time Domain)" Click="OgdenHyperelasticContactTDBtn_Click"/>
+                        <MenuItem Header="Elastic(Contact)(1)(Time Domain)" Click="ElasticContactTD1Btn_Click"/>
+                        <MenuItem Header="Elastic(Contact)(2)(Time Domain)" Click="ElasticContactTD2Btn_Click"/>
                         <Separator/>
-                        <MenuItem Header="Elastic(Circle Contact)(Time Domain)" Click="ElasticCircleContactTDBtn_Click"/>
-                        <MenuItem Header="St.Venant(Circle Contact)(Time Domain)" Click="StVenantHyperelasticCircleContactTDBtn_Click"/>
-                        <MenuItem Header="Mooney-Rivlin(Circle Contact)(Time Domain)" Click="MooneyRivlinHyperelasticCircleContactTDBtn_Click"/>
-                        <MenuItem Header="Ogden(Circle Contact)(Time Domain)" Click="OgdenHyperelasticCircleContactTDBtn_Click"/>
+                        <MenuItem Header="St.Venant(Contact)(1)(Time Domain)" Click="StVenantHyperelasticContactTD1Btn_Click"/>
+                        <MenuItem Header="St.Venant(Contact)(2)(Time Domain)" Click="StVenantHyperelasticContactTD2Btn_Click"/>
+                        <Separator/>
+                        <MenuItem Header="Mooney-Rivlin(Contact)(1)(Time Domain)" Click="MooneyRivlinHyperelasticContactTD1Btn_Click"/>
+                        <MenuItem Header="Mooney-Rivlin(Contact)(2)(Time Domain)" Click="MooneyRivlinHyperelasticContactTD2Btn_Click"/>
+                        <Separator/>
+                        <MenuItem Header="Ogden(Contact)(1)(Time Domain)" Click="OgdenHyperelasticContactTD1Btn_Click"/>
+                        <MenuItem Header="Ogden(Contact)(2)(Time Domain)" Click="OgdenHyperelasticContactTD2Btn_Click"/>
                     </MenuItem>
                     <MenuItem Header="Elastic(2 Body Contact)">
                         <MenuItem Header="Elastic(2 Body Contact)" Click="ElasticTwoBodyContactBtn_Click"/>
                         <MenuItem Header="Elastic(2 Body Contact)(Time Domain)" Click="ElasticTwoBodyContactTDBtn_Click"/>
+                        <Separator/>
                         <MenuItem Header="St.Venant(2 Body Contact)" Click="StVenantHyperelasticTwoBodyContactBtn_Click"/>
                         <MenuItem Header="St.Venant(2 Body Contact)(Time Domain)" Click="StVenantHyperelasticTwoBodyContactTDBtn_Click"/>
+                        <Separator/>
                         <MenuItem Header="Mooney-Rivlin(2 Body Contact)(Time Domain)" Click="MooneyRivlinHyperelasticTwoBodyContactTDBtn_Click"/>
+                        <Separator/>
                         <MenuItem Header="Ogden(2 Body Contact)(Time Domain)" Click="OgdenHyperelasticTwoBodyContactTDBtn_Click"/>
                     </MenuItem>
                 </MenuItem>
@@ -229,9 +245,40 @@
                     <MenuItem Header="Elastic(3D)">
                         <MenuItem Header="Linear(3D)(1)" Click="ElasticLinear3D1Btn_Click"/>
                         <MenuItem Header="Linear(3D)(1)(Time Domain)" Click="ElasticLinear3DTD1Btn_Click"/>
+                        <MenuItem Header="Linear(3D)(2)" Click="ElasticLinear3D2Btn_Click"/>
+                        <MenuItem Header="Linear(3D)(2)(Time Domain)" Click="ElasticLinear3DTD2Btn_Click"/>
+                        <MenuItem Header="Linear(3D)(Eigen)" Click="ElasticLinearEigen3DBtn_Click"/>
                         <Separator/>
                         <MenuItem Header="St.Venant(3D)(1)" Click="StVenantHyperelastic3D1Btn_Click"/>
                         <MenuItem Header="St.Venant(3D)(1)(Time Domain)" Click="StVenantHyperelastic3DTD1Btn_Click"/>
+                        <MenuItem Header="St.Venant(3D)(2)" Click="StVenantHyperelastic3D2Btn_Click"/>
+                        <MenuItem Header="St.Venant(3D)(2)(Time Domain)" Click="StVenantHyperelastic3DTD2Btn_Click"/>
+                        <MenuItem Header="St.Venant(3D)(Eigen)" Click="StVenantHyperelasticEigen3DBtn_Click"/>
+                        <Separator/>
+                        <MenuItem Header="Mooney-Rivlin(3D)" Click="MooneyRivlinHyperelastic3DBtn_Click"/>
+                        <MenuItem Header="Mooney-Rivlin(3D)(Time Domain)" Click="MooneyRivlinHyperelastic3DTDBtn_Click"/>
+                        <Separator/>
+                        <MenuItem Header="Ogden(3D)" Click="OgdenHyperelastic3DBtn_Click"/>
+                        <MenuItem Header="Ogden(3D)(Time Domain)" Click="OgdenHyperelastic3DTDBtn_Click"/>
+                    </MenuItem>
+                    <MenuItem Header="Elastic(3D)(MPC)">
+                        <MenuItem Header="Elastic(3D)(MPC)(Time Domain)" Click="ElasticMultipointConstraint3DTDBtn_Click"/>
+                        <MenuItem Header="St.Venant(3D)(MPC)(Time Domain)" Click="StVenantHyperelasticMultipointConstraint3DTDBtn_Click"/>
+                        <MenuItem Header="Mooney-Rivlin(3D)(MPC)(Time Domain)" Click="MooneyRivlinHyperelasticMultipointConstraint3DTDBtn_Click"/>
+                        <MenuItem Header="Ogden(MPC)(3D)(Time Domain)" Click="OgdenHyperelasticMultipointConstraint3DTDBtn_Click"/>
+                    </MenuItem>
+                    <MenuItem Header="Elastic(3D)(Contact)">
+                        <MenuItem Header="Elastic(3D)(Contact)(1)(Time Domain)" Click="ElasticContact3DTD1Btn_Click"/>
+                        <MenuItem Header="Elastic(3D)(Contact)(2)(Time Domain)" Click="ElasticContact3DTD2Btn_Click"/>
+                        <Separator/>
+                        <MenuItem Header="St.Venant(3D)(Contact)(1)(Time Domain)" Click="StVenantHyperelasticContact3DTD1Btn_Click"/>
+                        <MenuItem Header="St.Venant(3D)(Contact)(2)(Time Domain)" Click="StVenantHyperelasticContact3DTD2Btn_Click"/>
+                        <Separator/>
+                        <MenuItem Header="Mooney-Rivlin(3D)(Contact)(1)(Time Domain)" Click="MooneyRivlinHyperelasticContact3DTD1Btn_Click"/>
+                        <MenuItem Header="Mooney-Rivlin(3D)(Contact)(2)(Time Domain)" Click="MooneyRivlinHyperelasticContact3DTD2Btn_Click"/>
+                        <Separator/>
+                        <MenuItem Header="Ogden(3D)(Contact)(1)(Time Domain)" Click="OgdenHyperelasticContact3DTD1Btn_Click"/>
+                        <MenuItem Header="Ogden(3D)(Contact)(2)(Time Domain)" Click="OgdenHyperelasticContact3DTD2Btn_Click"/>
                     </MenuItem>
                 </MenuItem>
                 <MenuItem Header="Elastic(Waveguide)">
