--- a/src/IvyFEMProtoApp/IvyFEMProtoApp/MainWindow.xaml
+++ b/src/IvyFEMProtoApp/IvyFEMProtoApp/MainWindow.xaml
@@ -448,15 +448,15 @@
                         <MenuItem Header="Vorticity(RK)(2)(Time Domain)" Click="StdGVorticityFluid2RKTDBtn_Click"/>
                     </MenuItem>
                 </MenuItem>
-                <MenuItem Header="Fluid(Displacement)">
-                    <!--
-                    <MenuItem Header="Fluid(Displacement)">
-                        <MenuItem Header="Fluid(Displacement)(1)(Time Domain)" Click="FluidDisplacement1TDBtn_Click"/>
-                    </MenuItem>
-                    -->
+                <MenuItem Header="Fluid(Other)">
                     <MenuItem Header="Fluid(FIC)">
                         <MenuItem Header="Fluid(FIC)(1)(Time Domain)" Click="FluidFIC1TDBtn_Click"/>
-                        <!--<MenuItem Header="Fluid(FIC)(2)(Time Domain)" Click="FluidFIC2TDBtn_Click"/>-->
+                    </MenuItem>
+                    <Separator/>
+                    <MenuItem Header="Fluid(RANS)">
+                        <MenuItem Header="Fluid(RANS)(0)(Time Domain)" Click="FluidRANS0TDBtn_Click"/>
+                        <MenuItem Header="Fluid(RANS)(1)(Time Domain)" Click="FluidRANS1TDBtn_Click"/>
+                        <MenuItem Header="Fluid(RANS)(2)(Time Domain)" Click="FluidRANS2TDBtn_Click"/>
                     </MenuItem>
                 </MenuItem>
                 <MenuItem Header="Fluid(3D)">
